tests/baselines/reference/optionalChainWithInstantiationExpression1(target=es2019).errors.txt
tests/cases/compiler/optionalChainWithInstantiationExpression1.ts(12,9): error TS1477: Instantiation expression cannot be followed by property access.


==== tests/cases/compiler/optionalChainWithInstantiationExpression1.ts (1 errors) ====
    declare namespace A {
        export class b<T> {
            static d: number;
            constructor(x: T);
        }
    }
    
    type c = unknown;
    
    declare const a: typeof A | undefined;
    
    a?.b<c>.d;
            ~
!!! error TS1477: Instantiation expression cannot be followed by property access.
    
    a?.b.d
    